fix hero wrap

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -52,9 +52,9 @@
     margin-right: auto;
   }
   padding: 180px 37px 203px 36px;
-  @media screen and(min-width: 768px) {
-    padding: 154px 340px 372px 40px;
-  }
+  // @media screen and(min-width: 768px) {
+  //   padding: 154px 340px 372px 40px;
+  // }
   @media screen and(min-width: 1280px) {
     padding: 180px 702px 319px 142px;
   }
